changed array of objects to array of array

--- a/vgsales/views/index.html
+++ b/vgsales/views/index.html
@@ -9,29 +9,42 @@
 
     function drawSeriesChart() {
 
-      var data = google.visualization.arrayToDataTable([
-        ['ID', 'Life Expectancy', 'Fertility Rate', 'Region',     'Population'],
-        ['CAN',    80.66,              1.67,      'North America',  33739900],
-        ['DEU',    79.84,              1.36,      'Europe',         81902307],
-        ['DNK',    78.6,               1.84,      'Europe',         5523095],
-        ['EGY',    72.73,              2.78,      'Middle East',    79716203],
-        ['GBR',    80.05,              2,         'Europe',         61801570],
-        ['IRN',    72.49,              1.7,       'Middle East',    73137148],
-        ['IRQ',    68.09,              4.77,      'Middle East',    31090763],
-        ['ISR',    81.55,              2.96,      'Middle East',    7485600],
-        ['RUS',    68.6,               1.54,      'Europe',         141850000],
-        ['USA',    78.09,              2.05,      'North America',  307007000]
-      ]);
+      
+
+      
+      	var googleData = [];
+    	var chartData = [];
+		$(function(){
+			$.ajax({
+		    url: 'http://localhost:3000/sales',
+		    type: 'GET',
+		    success : function(data) {
+		      chartData = data;
+		      console.log(data);
+		    }
+		  });
+			googleData.push(['ID','Genre','Year','Global Sales']);
+		 for (var i = 0; i < chartData.length; i++){
+		 	var array = [];
+		 	array.push(chartData[i].value["publisher"]);
+		 	array.push(chartData[i]._id["genre"]);
+		 	array.push(chartData[i]._id["year"]);
+		 	array.push(chartData[i].value["global_sales"]);
+		 	googleData.push(array);
+		 }
+		
+		});
+		console.log(googleData);
+		var data = google.visualization.arrayToDataTable(googleData);
 
       var options = {
         title: 'Correlation between life expectancy, fertility rate ' +
                'and population of some world countries (2010)',
-        hAxis: {title: 'Life Expectancy'},
-        vAxis: {title: 'Fertility Rate'},
+        hAxis: {title: 'Genre'},
+        vAxis: {title: 'Year'},
         bubble: {textStyle: {fontSize: 11}}
       };
-
-      var chart = new google.visualization.BubbleChart(document.getElementById('series_chart_div'));
+		var chart = new google.visualization.BubbleChart(document.getElementById('series_chart_div'));
       chart.draw(data, options);
     }
     </script>
@@ -43,50 +56,7 @@
 
 
 	<script type="text/javascript">
-		var chartData;
-		$(function(){
-			$.ajax({
-		    url: 'http://localhost:3000/sales',
-		    type: 'GET',
-		    success : function(data) {
-		      chartData = data;
-		      console.log(data);
-		    }
-		  });
-		 var data = {
-		    datasets: [
-		        {
-		            label: 'First Dataset',
-		            data: [
-		                {
-		                    x: 20,
-		                    y: 30,
-		                    r: 15
-		                },
-		                {
-		                    x: 40,
-		                    y: 10,
-		                    r: 10
-		                }
-		            ],
-		            backgroundColor:"#FF6384",
-		            hoverBackgroundColor: "#FF6384",
-		        }]
-		};
-		var ctx = document.getElementById("myChart");
-		var myBubbleChart = new Chart(ctx,{
-		    type: 'bubble',
-		    data: data,
-		    options: {
-		        elements: {
-		            points: {
-		                borderWidth: 1,
-		                borderColor: 'rgb(0, 0, 0)'
-		            }
-		        }
-		    }
-		});
-	});
+		
 		  
 	</script>
 
