--- a/vgsales/views/index.html
+++ b/vgsales/views/index.html
@@ -6,34 +6,41 @@
     <script type="text/javascript">
       google.charts.load('current', {'packages':['corechart']});
       google.charts.setOnLoadCallback(drawSeriesChart);
-
+      var googleData;
+      function getData(url) {
+        var chartData = [];
+        $(function(){
+          $.ajax({
+          url: url,
+          type: 'GET',
+          success : function(data) {
+            chartData = data;
+            console.log("Loaded Data");
+            console.log(chartData);
+          }
+          });
+        });
+        return chartData;
+    }
     function drawSeriesChart() {
 
       
 
       
-      	var googleData = [];
-    	var chartData = [];
-		$(function(){
-			$.ajax({
-		    url: 'http://localhost:3000/sales',
-		    type: 'GET',
-		    success : function(data) {
-		      chartData = data;
-		      console.log(data);
-		    }
-		  });
+      
+      var dataFromReq = getData('http://localhost:3000/sales');		
+        console.log(dataFromReq);
 			googleData.push(['ID','Genre','Year','Global Sales']);
-		 for (var i = 0; i < chartData.length; i++){
+		 for (var i = 0; i < dataFromReq.length; i++){
 		 	var array = [];
-		 	array.push(chartData[i].value["publisher"]);
-		 	array.push(chartData[i]._id["genre"]);
-		 	array.push(chartData[i]._id["year"]);
-		 	array.push(chartData[i].value["global_sales"]);
+		 	array.push(dataFromReq[i].value["publisher"]);
+		 	array.push(dataFromReq[i]._id["genre"]);
+		 	array.push(dataFromReq[i]._id["year"]);
+		 	array.push(dataFromReq[i].value["global_sales"]);
 		 	googleData.push(array);
 		 }
 		
-		});
+		}
 		console.log(googleData);
 		var data = google.visualization.arrayToDataTable(googleData);
 
@@ -46,7 +53,7 @@
       };
 		var chart = new google.visualization.BubbleChart(document.getElementById('series_chart_div'));
       chart.draw(data, options);
-    }
+    
     </script>
   </head>
 <body>
