--- a/views/index.html
+++ b/views/index.html
@@ -12,7 +12,7 @@
         var chartData = [];
         $(function(){
           $.ajax({
-          url: 'http://localhost:3000/sales',
+          url: '/sales',
           type: 'GET',
           success : function(data) {
             chartData = JSON.parse(data);
